add code for link to WB dealers tab

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ landing: yes
          data-masked="true"><span style="color:#d34b40;">Automated</span> Exchanger Cleaning
     </div>
 
-    <a href="/sentinel_2020" target="_self" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
+    <a href="/sentinel" target="_self" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
        data-effect="t(true,n,n,-600,n,n,n,n,n,n,n,n,n,n,n)" 
        data-duration="2400" 
        data-delay="1600" 
