--- a/lp-sentinel.html
+++ b/lp-sentinel.html
@@ -52,15 +52,15 @@ master-slider: yes
       <li style="padding-bottom:10px;">Job data reports provide performance metrics and enable accurate job planning</li>
       <li>Dedicated safety systems protect the user and equipment</li>
     </ol>
-    <a href="/contact" style="color:#d34b40;">
+    <a href="/rentals" style="color:#d34b40;">
       <table style="margin-top: 30px; margin-bottom:30px; border:0;">
         <tr>
           <td>
             <img src="/assets/img/icon-rental-01.png" style="float:left; padding-right:15px; max-width:75px; margin-bottom:20px; margin-top:" />
           </td>
           <td>
-            <h2 style="font-weight:bold; margin-bottom:0; padding-bottom:0;">Rentals will be available this fall</h2>
-            <p>Contact your local branch office to inquire about renting a Sentinel unit for your job.</p>
+            <h2 style="font-weight:bold; margin-bottom:0; padding-bottom:0;">Available in our rental fleet!</h2>
+            <p>Contact your local branch office to inquire about renting an ABXS-3L powered with Sentinel Automation Technology for your next job.</p>
           </td>
         </tr>
       </table>
@@ -70,10 +70,10 @@ master-slider: yes
   <aside class="col-sm-3 col-sm-offset-2">
     <img src="assets/img/sentinel_logo.png" class="img-responsive">
     <div style="padding-top:45px;"> 
-      <h2 class="slab" style="color:#000;font-weight:600;">Want Updates?</h2>
-      <h5 class="thin" style="line-height:130%; color:#000;">Be the first to know about release dates, pricing,demo opportunities, and other Sentinel news.</h5>
+      <h2 class="slab" style="color:#000;font-weight:600;">Sales release 2021!</h2>
+      <h5 class="thin" style="line-height:130%; color:#000;"><strong>Want Updates?</strong> Be the first to know about release dates, pricing, demo opportunities, and other Sentinel news.</h5>
       <!-- Pardot contact form -->
-      <iframe src="https://info.stoneagetools.com/l/644393/2020-03-30/tzxkx" width="100%" scrolling="no" id="sizetracker" frameborder="0" style="margin-left:-15px;"></iframe>        
+      <iframe src="https://info.stoneagetools.com/l/644393/2020-03-30/tzxkx" width="100%" height="300" scrolling="no" id="sizetracker" frameborder="0" style="margin-left:-15px;"></iframe>        
         <!-- Pardot form sizing -->
         <script type="text/javascript">
           // Create browser compatible event handler.
