add ProP-DBP   to solutions page"

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ landing: yes
       data-position="normal"><span style="font-weight:400; text-transform: none;">Help save lives and reduce injuries in the industrial cleaning industry.</span>
     </div>
 
-    <a href="https://www.globalindustrialcleaningcoalition.org/industrial-vacuuming" target="_blank" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
+    <a href="https://www.globalindustrialcleaningcoalition.org/cleaning-principles/industrial-vacuuming" target="_blank" class="ms-layer ms-btn ms-btn-circle ms-btn-m" 
        data-effect="t(true,n,n,-600,n,n,n,n,n,n,n,n,n,n,n)" 
        data-duration="2400" 
        data-delay="1600" 
@@ -363,6 +363,16 @@ landing: yes
     </div>
     <ul class="home-news list-unstyled"> 
       <li>
+        <h4><a href="https://news.stoneagetools.com/what-to-expect-in-2021-from-stoneage-ceo-kerry-siggins/">What to Expect in 2021 from StoneAge CEO, Kerry Siggins</a></h4>
+        <p>2021 is shaping up to be a fantastic year at StoneAge. Our mission is to make our customers’ lives easier and safer. Read what we are planning for this year.<br>
+        <small><i class="fa fa-newspaper-o"></i> Blog, February 2021</small></p>
+      </li>
+      <li>
+        <h4><a href="https://news.stoneagetools.com/from-the-field-customer-experience-on-the-2-badger/">From the Field: Customer Experience on the 2″ Badger</a></h4>
+        <p>How the StoneAge 2″ Badger elevated the cleaning of a German refinery by completing all tasks perfectly, regardless of high level of contamination.<br>
+        <small><i class="fa fa-newspaper-o"></i> Blog, November 2020</small></p>
+      </li>
+      <li>
         <h4><a href="https://news.stoneagetools.com/industry-training-in-the-era-of-covid-19/">Industry Training in the Era of COVID-19</a></h4>
         <p>Water Jetting Association (WJA) certification goes virtual.<br>
         <small><i class="fa fa-newspaper-o"></i> Blog, October 2020</small></p>
@@ -373,20 +383,10 @@ landing: yes
         <small><i class="fa fa-newspaper-o"></i> Blog, May 2020</small></p>
       </li>  
       <li>
-        <h4><a href="https://news.stoneagetools.com/new-wjta-approved-stoneage-training/">NEW! WJTA-Approved StoneAge Training)</a></h4>
-        <p>As the nation prepares to re-open, we are eagerly waiting for the opportunity to train your teams again in person – helping you go back to work safer, smarter, and more productively. <br>
-        <small><i class="fa fa-newspaper-o"></i> Blog, May 2020</small></p>
-      </li> 
-      <li>
         <h4><a href="https://news.stoneagetools.com/stoneage-announces-the-acquisition-of-internet-of-things-iot-product-development-firm-breadware-inc/">StoneAge Announces the Acquisition of Internet of Things (Iot) Product Development Firm Breadware, Inc.</a></h4>
         <p>We are pleased to announce that on March 31, 2020, StoneAge acquired Breadware, Inc., an industrial IoT product development company headquartered in Reno, Nevada.<br>
         <small><i class="fa fa-newspaper-o"></i> Blog, April 2020</small></p>
       </li> 
-      <li>
-        <h4><a href="https://news.stoneagetools.com/succeeding-in-uncertain-times/">Succeeding in Uncertain Times</a></h4>
-        <p>We don’t have time to waste wishing for things that aren’t; we can only do what we can with what we have.<br>
-        <small><i class="fa fa-newspaper-o"></i> Blog, March 2020</small></p>
-      </li>
       <li><a href="https://news.stoneagetools.com/">More news here</a></li>
     </ul>
   </div>
