--- a/solutions.html
+++ b/solutions.html
@@ -19,12 +19,12 @@ master-slider: yes
   <div class="row">     
     <div id="owl-culture" class="owl-carousel owl-theme staff-carousel">
       <div class="item">
-        <img class="img-responsive" src="/assets/img/solutions/Blastrack-Wall-01.jpg" alt="Blastrack wall cleaner">
-        <h4>Blastrack wall cleaning in tunnel</h4>
+        <img class="img-responsive" src="/assets/img/solutions/ProP-DBP_01.jpg" alt="PROP-DBP no-entry domed tube bundle cleaning">
+        <h4>PROP-DBP no-entry tube bundle cleaning</h4>
       </div>
       <div class="item">
-        <img class="img-responsive" src="/assets/img/solutions/Domed_Bundle_Positioner_01.jpg" alt="Automated domed bundle tube cleaning">
-        <h4>No-entry domed bundle cleaning</h4>
+        <img class="img-responsive" src="/assets/img/solutions/Blastrack-Wall-01.jpg" alt="Blastrack wall cleaner">
+        <h4>Blastrack wall cleaning in tunnel</h4>
       </div>
       <div class="item">
         <img class="img-responsive" src="/assets/img/solutions/Blastrack-XY-01.jpg" alt="Blastrack X/Y cleaner">
@@ -41,6 +41,10 @@ master-slider: yes
       <div class="item">
         <img class="img-responsive" src="/assets/img/solutions/Hose-Reels.jpg" alt="Custom hose reels">
         <h4>Custom hose reels</h4>
+      </div>
+      <div class="item">
+        <img class="img-responsive" src="/assets/img/solutions/Domed_Bundle_Positioner_01.jpg" alt="Automated domed bundle tube cleaning">
+        <h4>No-entry domed bundle cleaning</h4>
       </div>
       <div class="item">
         <img class="img-responsive" src="/assets/img/solutions/Cyclone-Cleaner-02.jpg" alt="Cyclone Cleaner (retracted)">
