privacy and EULA updates

--- a/privacy.html
+++ b/privacy.html
@@ -19,6 +19,8 @@ permalink: /privacy
         <p class="thin">This page explains what information we may collect about you and how we use it.</p>
         <p class="thin">StoneAge has a Privacy Officer who is responsible for StoneAge’s compliance with and enforcement of this policy. Our Privacy Officer is available to any of its employees, customers, suppliers, business partners, or others who may have questions concerning this Policy or data security practices. StoneAge agrees to cooperate with Data Protection Authorities.</p>
         <p class="thin">Any questions, comments or complaints about these data practices can be directed to our Privacy Officer at +970-403-8536 or <a href="mailto:privacy@stoneagetools.com">privacy@stoneagetools.com</a>.</p>
+        
+        <h3><a href="/privacy-sentinel"><i class="fa fa-chevron-circle-right"></i> Review Privacy Policy for Sentinel Link</a></h3>
       </div>
     </div>
     <div class="row">
