--- a/terms.html
+++ b/terms.html
@@ -35,8 +35,7 @@ permalink: /terms
           <li><a href="#Law" class="region">Governing Law</a></li>
           <li><a href="#Jurisdiction" class="region">Jurisdiction and Venue</a></li>
           <li><a href="#Fees" class="region">Attorney’s Fees</a></li>
-          <li><a href="#Training" class="region">
-Training</a></li>
+          <li><a href="#Training" class="region">Training</a></li>
         </ul>
       </div>
     </div>
