misc updates, new Sentinel LP live

--- a/assets/vid/vids.html
+++ b/assets/vid/vids.html
@@ -11,6 +11,9 @@
 <div id="sa-dtv-vid">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/CIAb6kxRzaM?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
+<div id="sa-esop-vid">
+  <iframe width="854" height="480" src="https://www.youtube.com/embed/K6BOYMZ-rxQ?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+</div>
 <div id="featured-vid-LF2">
   <iframe width="854" height="480" src="https://www.youtube.com/embed/xg_B24UScoQ?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 </div>
