--- a/rotary-waterblast-tools/bjv-pipe-cleaning.html
+++ b/rotary-waterblast-tools/bjv-pipe-cleaning.html
@@ -528,8 +528,8 @@ master-slider: yes
           
           <!-- Kits -->
           <section id="section-bar-4">
-            <div class="col-sm-8">
-              <h3>The following kits are available:</h3>
+            <div class="col-sm-6">
+              <h3>The following kits are available for BJV:</h3>
               <p><em class="grey">Click to view kit contents</em></p>
               <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
                 <div class="panel panel-default">
@@ -1369,11 +1369,162 @@ master-slider: yes
                 </div>
               </div>
             </div>
-            <aside class="col-sm-3 col-sm-offset-1 aside-box">
-              <h3>Need Support?</h3>
-              <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
-              <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
-            </aside>
+            <!-- BJVE Kits -->
+            <div class="col-sm-6">
+              <h3>The following kits are available for BJVE:</h3>
+              <p><em class="grey">Click to view kit contents</em></p>
+              <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="headingE1">
+                    <h4 class="panel-title">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseE1" aria-expanded="false" aria-controls="collapseE1">
+                        <strong>BJVE 602</strong> Seal Kit for BJVE-P12/BJVE-MP12/BJVE-M24 <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapseE1" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingE1">
+                    <div class="panel-body">
+                      <div class="row">
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>1 x <strong>BJVE 012-TO</strong> VHP Seal</li>
+                            <li>1 x <strong>MJ 011-C</strong> Carbide Seat</li>
+                            <li>1 x <strong>BJ 071</strong> Backup Ring</li>
+                            <li>1 x <strong> BJ 072</strong> O-Ring</li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="headingE2">
+                    <h4 class="panel-title">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseE2" aria-expanded="false" aria-controls="collapseE2">
+                        <strong>BJVE 603</strong> SEAL KIT for BJVE-P16 <i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapseE2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingE2">
+                    <div class="panel-body">
+                      <div class="row">
+                        <div class="col-sm-6">
+                          <ul>
+                            <li>1 x <strong>BJVE 212-TO</strong> HP Seal</li>
+                            <li>1 x <strong>BJ 211</strong> Brass Seat</li>
+                            <li>1 x <strong>BJ 071</strong> Backup Ring</li>
+                            <li>1 x <strong>BJ 072</strong> O-Ring</li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="headingE3">
+                    <h4 class="panel-title">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseE3" aria-expanded="false" aria-controls="collapseE3">
+                        <strong>BJVE 604-XXX</strong> Seal Overhaul Kit for BJVE-P12/BJVE-MP12/BJVE-M24<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapseE3" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingE3">
+                    <div class="panel-body">
+                      <div class="row">
+                        <div class="col-sm-8">
+                          <ul>
+                            <li>1 x <strong>BJVE 012-TO</strong> HP Seal</li>
+                            <li>1 x <strong>MJ 011-C</strong> Carbide Seat</li>
+                            <li>1 x <strong>BJ 071</strong> Backup Ring</li>
+                            <li>1 x <strong>BJ 072</strong> O-Ring</li>
+                            <li>1 x <strong>BJVE 016-O</strong> Shaft Seat</li>
+                            <li>1 x <strong>BJVE 015-XXX</strong> Inlet Nut Cartridge</li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="headingE4">
+                    <h4 class="panel-title">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseE4" aria-expanded="false" aria-controls="collapseE4">
+                        <strong>BJVE 605</strong> Seal Overhaul Kit for BJV-P16<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapseE4" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingE4">
+                    <div class="panel-body">
+                      <div class="row">
+                        <div class="col-sm-8">
+                          <ul>
+                            <li>1 x <strong>BJVE 212-TO</strong> HP Sea</li>
+                            <li>1 x <strong>BJ 211</strong> Brass Seat</li>
+                            <li>1 x <strong>BJ 071</strong> Backup Ring</li>
+                            <li>1 x <strong>BJ 072</strong> O-Ring</li>
+                            <li>1 x <strong>BJVE 016-HF-O</strong> High Flow Shaft Seat</li>
+                            <li>1 x <strong> BJVE 015-P16</strong> 6 Inlet Nut Cartridge</li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="headingE5">
+                    <h4 class="panel-title">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseE5" aria-expanded="false" aria-controls="collapseE5">
+                        <strong>BJVE 610</strong> Swivel Overhaul Kit for All BJVE Models<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapseE5" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingE5">
+                    <div class="panel-body">
+                      <div class="row">
+                        <div class="col-sm-9">
+                          <ul>
+                            <li>1 x <strong>BJ 007</strong> Front Bearing</li>
+                            <li>1 x <strong>SC212 007</strong> Rear Bearing</li>
+                            <li>1 x <strong>WGR 006</strong> Front-Outer Shaft Seal</li>
+                            <li>1 x <strong>BJVE 006</strong> Front-Inner Shaft Seal</li>
+                            <li>1 x <strong>BJVE 010</strong> Rear-Inner Shaft Sea</li>
+                            <li>1 x <strong>WHR 006</strong> Rear-Outer Shaft Sea</li>
+                            <li>1 x <strong>BJ 008</strong> O-Ring, Inlet Nut</li>
+                            <li>2 x <strong>BJVE 026</strong> Port Plugs</li>
+                            <li>1 x <strong>WHR 014</strong> Wave Spring</li>
+                            <li>1 x <strong>BJ 048-M</strong> Medium Visc - 6 oz</li>
+                            <li>1 x <strong>GP 043</strong> Blue Goop 2 oz</li>
+                            <li>1 x <strong>GP 049.1</strong> Syringe, .68oz</li>
+                            <li>1 x <strong>GP 049.2</strong> Cap, Syringe, Lock Cap</li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="panel panel-default">
+                  <div class="panel-heading" role="tab" id="headingE6">
+                    <h4 class="panel-title">
+                      <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseE6" aria-expanded="false" aria-controls="collapseE6">
+                        <strong>BJVE 612</strong> Tool Kit for All BJVE Models<i class="indicator fa fa-caret-down pull-right" aria-hidden="true"></i>
+                      </a>
+                    </h4>
+                  </div>
+                  <div id="collapseE6" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingE6">
+                    <div class="panel-body">
+                      <div class="row">
+                        <div class="col-sm-8">
+                          <ul>
+                            <li>1 x <strong>WGR 186</strong> HP Seal Puller</li>
+                            <li>1 x <strong>BJVE 180</strong>  Installation Press Tool</li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </section>
 
         </div><!-- /content -->
