--- a/sentinel-lp/sentinel.html
+++ b/sentinel-lp/sentinel.html
@@ -183,7 +183,9 @@
   <section id="cards-section" class="plan">
     <div class="centered-container w-container">
       <h2 class="heading-1">Plant expectations are high. Don’t be held back. </h2>
-      <p class="p-body width-80">We make it easy to put the future of industrial cleaning in your hands.</p>
+      <p class="p-body width-80">We make it easy to put the future of industrial cleaning in your hands. Schedule a virtual overview to see how Sentinel  works to increase safety, productivity &amp; profitability.</p>
+      <a href="https://info.stoneagetools.com/l/644393/2021-03-09/2ss8bh" data-featherlight="iframe" data-featherlight-iframe-height="550" data-featherlight-iframe-width="480" class="btn w-button" style="margin-bottom:120px;">Schedule a virtual overview</a>
+<!--
       <div class="cards-grid-container">
         <div id="w-node-_2335f469-1683-32f9-788a-67ad644679ff-866c6dab" data-w-id="2335f469-1683-32f9-788a-67ad644679ff" style="opacity:0" class="card">
           <div class="round">
@@ -213,7 +215,9 @@
           </div>
         </div>
       </div>
+-->
     </div>
+<!--
     <div class="options-container w-container">
       <div class="w-layout-grid options">
         <div id="w-node-_015055be-1a5a-3534-b4f2-61334b1bea4c-866c6dab">
@@ -245,6 +249,7 @@
         </div>
       </div>
     </div>
+-->
   </section>
   <div class="w-layout-grid guide">
     <div id="w-node-d293655c-8dc4-7fce-2042-8733333716bc-866c6dab" class="guide-text">
@@ -262,21 +267,21 @@
           <h1 class="heading-4">Documentation</h1>
           <p class="p-body light">See how Sentinel Technology is helping industrial cleaning professionals around the world.</p>
         </div>
-        <a id="w-node-_26437a1e-b204-0d95-53f4-f724a57394bf-866c6dab" href="#" class="link-docs w-inline-block"><img src="images/thumb-pack_01.jpg" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 591px) 93vw, 550px" srcset="images/thumb-pack_01-p-500.jpeg 500w, images/thumb-pack_01.jpg 550w" alt="Automation technology for exchanger tube cleaning" class="image">
+        <a href="https://info.stoneagetools.com/l/644393/2021-05-17/32hx1v" target="_blank" class="link-docs w-inline-block"><img src="images/thumb-pack_01.jpg" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 591px) 93vw, 550px" srcset="images/thumb-pack_01-p-500.jpeg 500w, images/thumb-pack_01.jpg 550w" alt="Automation technology for exchanger tube cleaning" class="image">
           <h3 class="heading-2 red">Brochure</h3>
           <p class="p-400 light">Why Sentinel Automation Technology is a must-have for industrial exchanger tube cleaning</p>
           <div class="btn secondary">
             <div class="text-block">Download</div>
           </div>
         </a>
-        <a href="#" class="link-docs w-inline-block"><img src="images/thumb-reym_01.jpg" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 591px) 93vw, 550px" srcset="images/thumb-reym_01-p-500.jpeg 500w, images/thumb-reym_01.jpg 550w" alt="Automation technology for exchanger tube cleaning" class="image-2">
+        <a href="https://info.stoneagetools.com/l/644393/2021-05-17/32hx2s" target="_blank" class="link-docs w-inline-block"><img src="images/thumb-reym_01.jpg" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 591px) 93vw, 550px" srcset="images/thumb-reym_01-p-500.jpeg 500w, images/thumb-reym_01.jpg 550w" alt="Automation technology for exchanger tube cleaning" class="image-2">
           <h3 class="heading-2 red">Case Study</h3>
           <p class="p-400 light">Find out how one contractor cut cleaning time by 50% in zero visibility conditions</p>
           <div class="btn secondary">
             <div class="text-block">Download</div>
           </div>
         </a>
-        <a href="#" class="link-docs w-inline-block"><img src="images/thumb-controller_01.jpg" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 591px) 93vw, 550px" srcset="images/thumb-controller_01-p-500.jpeg 500w, images/thumb-controller_01.jpg 550w" alt="Automation technology for exchanger tube cleaning" class="image-3">
+        <a href="https://info.stoneagetools.com/l/644393/2021-05-13/31xcfb" target="_blank" class="link-docs w-inline-block"><img src="images/thumb-controller_01.jpg" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 591px) 93vw, 550px" srcset="images/thumb-controller_01-p-500.jpeg 500w, images/thumb-controller_01.jpg 550w" alt="Automation technology for exchanger tube cleaning" class="image-3">
           <h3 class="heading-2 red">White Paper</h3>
           <p class="p-400 light">Read about our usability research and how beginner operators turn pro in one shift</p>
           <div class="btn secondary">
