--- a/waterblast-tools-automated-equipment.html
+++ b/waterblast-tools-automated-equipment.html
@@ -37,7 +37,7 @@ permalink: /waterblast-tools-automated-equipment
     </div>
 
     <div class="mix exchanger-cleaning" data-name="sentinel" data-designation="automated">
-      <a href="/sentinel_2020" class="search-text">
+      <a href="/sentinel" class="search-text">
         <img src="/assets/img/product/sentinel-logo-01.jpg" class="img-responsive" />
         <h3>Sentinel</h3>
         <h5>Automated Exchanger Cleaning</h5>
