--- a/lp-demo.html
+++ b/lp-demo.html
@@ -1,8 +1,9 @@
 ---
 layout: no-footer
 page-type: page
-title: Product Demos
-excerpt: Request a live demo of StoneAge equipment for high pressure industrial cleaning.
+title: See StoneAge Products in Action – Request a Live Product Demo! 
+description: Industrial cleaning contractors deserve easy access the information they need to complete jobs safely and efficiently. That's why StoneAge actively provides customers around the world customized virtual demos of our tools and equipment. Request a live demo of StoneAge tools and equipment for you and your team.
+image: /assets/img/og/live-demo-og.jpg
 permalink: /demo
 master-slider: yes
 ---
