--- a/podcast/episode-16.html
+++ b/podcast/episode-16.html
@@ -2,6 +2,8 @@
 layout: default
 page-type: page
 title: Industrial Theory Podcast Episode 16 - Sentinel Automation Technology, A New Era for the Industrial Cleaning Industry 
+description: In this episode, host Kerry Siggins interviews StoneAge’s former Director of Engineering and Technology about Sentinel Automation Technology. Learn how Sentinel was built, how it changes the way heat exchangers are cleaned, and how the technology marks a new era for the industrial cleaning industry. Listen to the podcast here.
+image: /assets/img/og/adam-og.jpg
 permalink: /16-adam-markham
 master-slider: yes
 ---
