--- a/podcast/episode-6.html
+++ b/podcast/episode-6.html
@@ -2,7 +2,9 @@
 layout: default
 page-type: page
 title: Industrial Theory Podcast Episode 6 - Growing an industrial cleaning company is never easy... What has set HCPSC apart
+description: In this episode of Industrial Theory, Kerry Siggins interviews Brad Clark, CEO of HydroChemPSC. They discuss how the right mix of organic growth, M&amp;A strategy execution, and strong leadership has set HCPSC apart. Listen to the podcast here.
 permalink: /6-brad-clark
+image: /assets/img/og/brad-og.jpg
 master-slider: yes
 ---
 
