--- a/waterblast-automation/navigator-small-pipe-cleaning.html
+++ b/waterblast-automation/navigator-small-pipe-cleaning.html
@@ -1,8 +1,9 @@
 ---
 layout: default
 page-type: product
-title: StoneAge Navigator Small Process Pipe Cleaning
-excerpt: The Navigator is specialized for cleaning small diameter conduit with multiple bends.
+title: StoneAge Navigator – Designed for Cleaning Small Pipes with Multiple Bends
+description: Ideal for cleaning piping, drain lines, and other small pipes with bends, the Navigator is the only automated hose device in the industry specifically engineered to clean small diameter process pipe with multiple bends. Learn more here.
+image: /assets/img/og/navigator-og.jpg
 permalink: /navigator
 master-slider: yes
 ---
