--- a/waterblast-automation/propositioner.html
+++ b/waterblast-automation/propositioner.html
@@ -1,8 +1,9 @@
 ---
 layout: default
 page-type: product
-title: ProPositioner for AutoBox ABX-PRO Automated Flex Lancing Systems
-excerpt: The ultra-portable and lightweight ProPositioner provides controlled, efficient indexing for single-lance automated exchanger tube cleaning with AutoBox ABX-PRO.
+title: StoneAge ProPositioner for AutoBox ABX-PRO Automated Flex Lancing Systems
+description: The ultra-portable and lightweight ProPositioner provides controlled, efficient indexing for single-lance automated exchanger tube cleaning with AutoBox ABX-PRO. This cost-effective system is engineered to mount to an exchanger face with a single point of contact for quick set-up. Learn more about the ProPositioner here.
+image: /assets/img/og/propositioner-og.jpg
 permalink: /propositioner
 master-slider: yes
 ---
