--- a/rentals.html
+++ b/rentals.html
@@ -2,6 +2,8 @@
 layout: default
 page-type: page
 title: Rent StoneAge Waterblast Tools and Automated Equipment
+description: Get your jobs done on time, on budget, and as easily as possible with equipment rentals from StoneAge – the world’s leading manufacturer of engineered waterblast tools and equipment since 1979. 
+image: /assets/img/og/rentals-og.jpg
 permalink: /rentals
 landing: yes
 ---
