--- a/rotary-waterblast-tools/sg-swivel.html
+++ b/rotary-waterblast-tools/sg-swivel.html
@@ -83,12 +83,13 @@ master-slider: yes
           
           <!-- Specs -->
           <section id="section-bar-1">
-            <div class="col-sm-9">
+            <div class="col-sm-10">
               <!-- Nav tabs -->
               <ul class="nav nav-tabs" role="tablist">
                 <li role="presentation" class="active"><a href="#sg-p8" aria-controls="sg-p8" role="tab" data-toggle="tab">SG-P8P8</a></li>
                 <li role="presentation"><a href="#sg-p12" aria-controls="sg-p12" role="tab" data-toggle="tab">SG-P12P12-62</a></li>
                 <li role="presentation"><a href="#sg-mp12" aria-controls="sg-mp12" role="tab" data-toggle="tab">SG-MP12AV12</a></li>
+                <li role="presentation"><a href="#sg-mp12k" aria-controls="sg-mp12k" role="tab" data-toggle="tab">SG-MP12K-62</a></li>
                 <li role="presentation"><a href="#sg-mp16" aria-controls="sg-mp16" role="tab" data-toggle="tab">SG-MP16MP16-62</a></li>
                 <li role="presentation"><a href="#sg-p12k" aria-controls="sg-p12k" role="tab" data-toggle="tab">SG-CCN-P12K</a></li>
                 <li role="presentation"><a href="#sg-mp12k" aria-controls="sg-mp12k" role="tab" data-toggle="tab">SG-CCN-MP12K</a></li>
@@ -153,7 +154,7 @@ master-slider: yes
                   <tbody>
                     <tr>
                       <th>Tool Model</th>
-                      <td colspan="2">SG-P12P12M</td>
+                      <td colspan="2">SG-P12P12-62</td>
                     </tr>
                     <tr>
                       <th>Maximum Pressure</th>
@@ -246,6 +247,58 @@ master-slider: yes
                     <tr>
                       <th>Weight</th>
                       <td>8.8 lb</td>
+                      <td><span class="metric">3.8 kg</span></td>
+                    </tr>
+                  </tbody>
+                  </table>     
+                </div>
+                <!-- SG-MP12K-62 -->
+                <div role="tabpanel" class="tab-pane" id="sg-mp12k">
+                  <table class="table specs table-hover">
+                  <tbody>
+                    <tr>
+                      <th>Tool Model</th>
+                      <td colspan="2">SG-MP12K-62</td>
+                    </tr>
+                    <tr>
+                      <th>Maximum Pressure</th>
+                      <td>15k psi</td>
+                      <td><span class="metric">1000 bar</span
+                    ></tr>
+                    <tr>
+                      <th>Maximum Flow</th>
+                      <td>110 gpm</td>
+                      <td><span class="metric">420 l/min</span></td>
+                    </tr>
+                    <tr>
+                      <th>Rotation Speed</th>
+                      <td colspan="2">0-600 rpm</td>
+                    </tr>
+                    <tr>
+                      <th>Flow Coefficient</th>
+                      <td colspan="2">4.6 Cv</td>
+                    </tr>
+                    <tr>
+                      <th>Inlet Connection</th>
+                      <td colspan="2">3/4 MP</td>
+                    </tr>
+                    <tr>
+                      <th>Shaft Connection</th>
+                      <td colspan="2">3/4 MP</td>
+                    </tr>
+                    <tr>
+                      <th>Diameter</th>
+                      <td>3.0 in.</td>
+                      <td><span class="metric">76 mm</span></td>
+                    </tr>
+                    <tr>
+                      <th>Length</th>
+                      <td>6.6 in.</td>
+                      <td><span class="metric">170 mm</span></td>
+                    </tr>
+                    <tr>
+                      <th>Weight</th>
+                      <td>8.4 lb</td>
                       <td><span class="metric">3.8 kg</span></td>
                     </tr>
                   </tbody>
@@ -409,11 +462,13 @@ master-slider: yes
                 </div>
               </div>
             </div>
+<!--
             <aside class="col-sm-3 aside-box">
               <h3>Need Support?</h3>
               <p>Our expert staff is available Monday through Friday 8AM - 5PM MST to answer questions and offer advice on your toughest cleaning applications.</p>
               <h4 class="slab">Phone: +1 970 259-2869<br>US Toll Free: (866) 795-1586</h4>
             </aside>
+-->
           </section>
       
           <!-- Applications -->
