--- a/lp-demo.html
+++ b/lp-demo.html
@@ -3,7 +3,7 @@ layout: no-footer
 page-type: page
 title: See StoneAge Products in Action – Request a Live Product Demo! 
 description: Industrial cleaning contractors deserve easy access the information they need to complete jobs safely and efficiently. That's why StoneAge actively provides customers around the world customized virtual demos of our tools and equipment. Request a live demo of StoneAge tools and equipment for you and your team.
-image: /assets/img/og/live-demo-og.jpg
+image: live-demo-og.jpg
 permalink: /demo
 master-slider: yes
 ---
