--- a/loc-houston.html
+++ b/loc-houston.html
@@ -54,24 +54,17 @@ contact-houston: yes
             <a href="mailto:stephen.shivar@stoneagetools.com">stephen.shivar@stoneagetools.com</a></p>
           </div>
           <div class="col-sm-6">
-            <p><strong>Faran Fatehi</strong><br/>
-              Office Manager/Inside Sales<br/>
-              <a href="mailto:faran.fatehi@stoneagetools.com">faran.fatehi@stoneagetools.com</a></p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-6">
             <p><strong>Doug McGee</strong>
             <br/>Automation Technician, Trainer<br/>
               <a href="mailto:doug.mcgee@stoneagetools.com">doug.mcgee@stoneagetools.com</a></p>
           </div>
+        </div>
+        <div class="row">
           <div class="col-sm-6">
             <p><strong>Brian King</strong>
             <br/>Automation Technician<br/>
               <a href="mailto:brian.king@stoneagetools.com">brian.king@stoneagetools.com</a></p>
           </div>
-        </div>
-        <div class="row">
           <div class="col-sm-6">
             <p><strong>Mike Rimmell</strong><br/>
               Rental, Repair and Automation (RRA) Technician<br/>
@@ -85,6 +78,11 @@ contact-houston: yes
             <p><strong>Sean Baker</strong><br/>
               Southeast Regional Sales Manager<br/>
             <a href="mailto:sean.baker@stoneagetools.com">sean.baker@stoneagetools.com</a></p>
+          </div>
+          <div class="col-sm-6">
+            <p><strong>Faran Fatehi</strong><br/>
+              Regional Sales Specialist<br/>
+              <a href="mailto:faran.fatehi@stoneagetools.com">faran.fatehi@stoneagetools.com</a></p>
           </div>
         </div>
 
