--- a/rentals.html
+++ b/rentals.html
@@ -668,7 +668,7 @@ landing: yes
           </tr>               
           <tr style="border-bottom: 3px solid #f2f2f2;">
             <td style="background-color: #666; color: #fff; text-align: center; padding: 0 15px; font-size:1.5em;"><strong class="slab">CA</strong></td>
-            <td style="padding: 4px 0 4px 15px;"><a href="https://advancedpressuresystems.ca/" target="_blank" style="font-weight: bold; font-style: normal;">Advanced Pressure Systems</a><br>Burlington, ON<br>+1 (844) 932-5278</td>
+            <td style="padding: 4px 0 4px 15px;"><a href="https://advancedpressuresystems.ca/" target="_blank" style="font-weight: bold; font-style: normal;">Riverstone Pressure Systems</a><br>Canada West +1 (780) 612 1315<br>Canada East +1 (844) 932 5278</td>
             <td style="background-color: #666; color: #fff; text-align: center; padding: 0 15px; font-size:1.5em;"><strong class="slab">NL</strong></td>
             <td style="padding: 4px 15px;"><a href="/netherlands" style="font-weight: bold; font-style: normal;">StoneAge NL</a><br>Rotterdam<br>+31 8590 27370</td>
             <td style="background-color: #666; color: #fff; text-align: center; padding: 0 15px; font-size:1.5em;"><strong class="slab">UK</strong></td>
