--- a/solutions.html
+++ b/solutions.html
@@ -20,7 +20,7 @@ master-slider: yes
     <div id="owl-culture" class="owl-carousel owl-theme staff-carousel">
       <div class="item">
         <img class="img-responsive" src="/assets/img/solutions/ProP-DBP_01.jpg" alt="PROP-DBP no-entry domed tube bundle cleaning">
-        <h4>PROP-DBP no-entry tube bundle cleaning</h4>
+        <h4>No-entry tube bundle cleaning</h4>
       </div>
       <div class="item">
         <img class="img-responsive" src="/assets/img/solutions/Blastrack-Wall-01.jpg" alt="Blastrack wall cleaner">
