--- a/manuals.html
+++ b/manuals.html
@@ -84,7 +84,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/abx-pro">ABX-PRO</a></td>
                 <td>AUTOBOX ABX-PRO<br>Hose drive for small pipe cleaning, sometimes referred to as PRODRIVE</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/ABX-PRO_manual.pdf" target="_blank" class="btn btn-sm">PL 612</a><br><small class="grey">Updated: 10/2020</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/ABX-PRO_manual.pdf" target="_blank" class="btn btn-sm">PL 612</a><br><small class="grey">Updated: 05/2021</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/ABX-PRO_data_sheet.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/ABX-PRO_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 11/2020</small></td>
                 <td class="text-center"></td>
@@ -244,7 +244,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/banshee">BN9.5, BN13, BN15,<br>BN18, BN24, BN33</a></td>
                 <td>BANSHEE<br>22k and 40k Tube spinners</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BN_Manual.pdf" target="_blank" class="btn btn-sm">PL 667</a><br><small class="grey">Updated: 04/2019</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BN_Manual.pdf" target="_blank" class="btn btn-sm">PL 667</a><br><small class="grey">Updated: 10/2020</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BN_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 11/2020</small></td>
                 <td class="text-center"></td>
@@ -392,6 +392,14 @@ permalink: /manuals
                 <td class="text-center"><a href="/assets/pdf/manuals/NAV-100_manual.pdf" target="_blank" class="btn btn-sm">PL 613</a><br><small class="grey">Updated: 03/2019</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/NAV_data_sheet.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/NAV_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 05/2019</small></td>
+                <td class="text-center"></td>
+              </tr>
+              <tr>
+                <td><a href="/propositioner">PRO-700-V3</a></td>
+                <td>ProDrain<br>Drain cleaning with ABX-PRO</td>
+                <td class="text-center"><a href="/assets/pdf/manuals/ABX-PRO_manual.pdf" target="_blank" class="btn btn-sm">PL 612</a><br><small class="grey">Updated: 05/2021</small></td>
+                <td class="text-center"><a href="/assets/pdf/data-sheets/ProDrain_data_sheet.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
+                <td class="text-center"></td>
                 <td class="text-center"></td>
               </tr>
               <tr>
