Add Compass product page + misc updates

--- a/manuals.html
+++ b/manuals.html
@@ -164,7 +164,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/barracuda">BC-K, BC-K-P2</a></td>
                 <td>BARRACUDA<br>22k rotary shotgun nozzle</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/BC-K_Manual.pdf" target="_blank" class="btn btn-sm">PL 514</a><br><small class="grey">Updated: 06/2020</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/BC-K_Manual.pdf" target="_blank" class="btn btn-sm">PL 514</a><br><small class="grey">Updated: 06/2021</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"><a href="/assets/pdf/tool-talks/BC_tool_talk.pdf" target="_blank" class="btn btn-sm">Tool Talk</a><br><small class="grey">Updated: 10/2020</small></td>
                 <td class="text-center"></td>
@@ -412,7 +412,7 @@ permalink: /manuals
               </tr>
               <tr>
                 <td>PROP-DBP</td>
-                <td>Domed Bundle Accessory for the ProPositioner</td>
+                <td>Compass - Domed bundle system for the ProDrive</td>
                 <td class="text-center"><a href="/assets/pdf/manuals/PROP-DBP_manual.pdf" target="_blank" class="btn btn-sm">PL 688</a><br><small class="grey">Updated: 08/2020</small></td>
                 <td class="text-center"></td>
                 <td class="text-center"></td>
@@ -661,7 +661,7 @@ permalink: /manuals
               <tr>
                 <td><a href="/wgr-magnum">WGR Magnum</a></td>
                 <td>WARTHOG WGR MAGNUM<br>Sewer Jetting Nozzles</td>
-                <td class="text-center"><a href="/assets/pdf/manuals/WGR_manual.pdf" target="_blank" class="btn btn-sm">PL 533</a><br><small class="grey">Updated: 06/2020</small></td>
+                <td class="text-center"><a href="/assets/pdf/manuals/WGR_manual.pdf" target="_blank" class="btn btn-sm">PL 533</a><br><small class="grey">Updated: 07/2021</small></td>
                 <td class="text-center"><a href="/assets/pdf/data-sheets/WGR_data_sheet.pdf" target="_blank" class="btn btn-sm">Brochure</a></td>
                 <td class="text-center"></td>
                 <td class="text-center"></td>
